added fonts, added img

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
-    <div>
-        <h1><font face="Courier New">Денис Панюхин</font></h1>
-        
+        <div class="start">
+            
+            <div>
+                <h1><font face="Courier New">Денис Панюхин</font></h1>
+                <p><font face="Courier New">Новичок в языках: HTML, CSS, C++</font></p>
+            </div>
+             <div><img src="Images/top.png"></div>
     </div>
 </body>
 
