Added Header, img with link to my github profile, added 2 buttons "about me", "Projects"

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <header>
+        <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.png" alt="gitlogo"></a></div>
+    <div>
+        <a href="#"><font face="Courier New">Обо мне</font></a>
+        <a href="#"><font face="Courier New">Проекты</font></a>
+    </div>
+    </header>
         <div class="start">
             
             <div>
