--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.png" alt="gitlogo"></a></div>
-    <div>
+    <div class="About">
         <a href="#"><font face="Courier New">Обо мне</font></a>
         <a href="#"><font face="Courier New">Проекты</font></a>
     </div>
