added some div's

--- a/index.html
+++ b/index.html
@@ -8,21 +8,33 @@
 </head>
 
 <body>
+
     <header>
         <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.png" alt="gitlogo"></a></div>
     <div class="About">
         <a href="#"><font face="Courier New">Обо мне</font></a>
         <a href="#"><font face="Courier New">Проекты</font></a>
+        <a href="#"><font face="Courier New">Контакты</font></a>
     </div>
     </header>
+
         <div class="start">
-            
             <div>
                 <h1><font face="Courier New">Денис Панюхин</font></h1>
                 <p><font face="Courier New">Новичок в языках: HTML, CSS, C++</font></p>
             </div>
              <div><img src="Images/top.png"></div>
     </div>
+
+    <div class="AboutMe">
+     <p>Обо мне</p>
+    </div>
+    <div class="bg-clr">
+    <div>
+        <p><font face="">Я - начинающий программист и верстальщик. <br>Изучаю: С++, HTML5, CSS3 </font></p>
+    </div>
+    </div>
+
 </body>
 
 </html>
