Added tab "About me"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.png" alt="gitlogo"></a></div>
+        <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.jpg" alt="gitlogo"></a></div>
     <div class="About">
         <a href="#"><font face="Courier New">Обо мне</font></a>
         <a href="#"><font face="Courier New">Проекты</font></a>
@@ -21,18 +21,24 @@
         <div class="start">
             <div>
                 <h1><font face="Courier New">Денис Панюхин</font></h1>
-                <p><font face="Courier New">Новичок в языках: HTML, CSS, C++</font></p>
+                <p><font face="Courier New">Новичок в языках: HTML, CSS, JS, C++</font></p>
             </div>
              <div><img src="Images/top.png"></div>
     </div>
 
     <div class="AboutMe">
-     <p>Обо мне</p>
+     <div class="AboutMe-div1">
+         <p><font face="IMPACT">Обо_мне.cmd</font></p>
+     </div>
+     <div><img src="Images/cmd-butts.png" alt=""></div>
     </div>
     <div class="bg-clr">
-    <div>
-        <p><font face="">Я - начинающий программист и верстальщик. <br>Изучаю: С++, HTML5, CSS3 </font></p>
+    <div class="AboutMe-Info">
+        <p><font face="Courier New">
+            Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br><br>C:\Users\User> Я - начинающий программист и верстальщик. 
+            <br>Изучаю: С++, HTML5, CSS3, JS </font></p>
     </div>
+
     </div>
 
 </body>
