--- a/index.html
+++ b/index.html
@@ -27,17 +27,25 @@
     </div>
 
     <div class="AboutMe">
-     <div class="AboutMe-div1">
+     <div>
          <p><font face="IMPACT">Обо_мне.cmd</font></p>
      </div>
      <div><img src="Images/cmd-butts.png" alt=""></div>
     </div>
     <div class="bg-clr">
     <div class="AboutMe-Info">
-        <p><font face="Courier New">
-            Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br><br>C:\Users\User> Я - начинающий программист и верстальщик. 
-            <br>Изучаю: С++, HTML5, CSS3, JS </font></p>
-    </div>
+        <div>
+            <p><font face="Courier New">
+                Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br><br>C:\Users\User> Я - начинающий программист и верстальщик.
+                <br>Изучаю: С++, HTML5, CSS3, JS </font></p>
+        </div>
+                <div class="Lang-imgs">
+                    <div class="Language"><img src="Images/сplus.png" alt=""></div>
+                        <div class="Language"><img src="Images/html.png" alt=""></div>
+                
+                    </div>
+            </div>
+
 
     </div>
 
