--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="start">
             <div>
-                <h1><font face="Courier New">Денис Панюхин</font></h1>
+                <h1><font face="Courier New">Денис Панюхин Алексеевич</font></h1>
                 <p><font face="Courier New">Новичок в языках: HTML, CSS, JS, C++</font></p>
             </div>
              <div><img src="Images/top.png"></div>
@@ -42,8 +42,9 @@
                 <div class="Lang-imgs">
                     <div class="Language"><img src="Images/сplus.png" alt=""></div>
                         <div class="Language"><img src="Images/html.png" alt=""></div>
-                
-                    </div>
+                <div class="Language"><img src="Images/css.png" alt=""></div>
+                <div class="Language"><img src="Images/js.png" alt=""></div>
+            </div>
             </div>
 
 
