Added div with "MyProject"

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
         <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.jpg" alt="gitlogo"></a></div>
     <div class="About">
-        <a href="#"><font face="Courier New">Обо мне</font></a>
-        <a href="#"><font face="Courier New">Проекты</font></a>
+        <a href="#About-button"><font face="Courier New">Обо мне</font></a>
+        <a href="#Project-button"><font face="Courier New">Проекты</font></a>
         <a href="#"><font face="Courier New">Контакты</font></a>
     </div>
     </header>
@@ -28,7 +28,7 @@
 
     <div class="AboutMe">
      <div>
-         <p><font face="IMPACT">Обо_мне.cmd</font></p>
+         <p id="About-button"><font face="IMPACT">Обо_мне.cmd</font></p>
      </div>
      <div><img src="Images/cmd-butts.png" alt=""></div>
     </div>
@@ -36,8 +36,9 @@
     <div class="AboutMe-Info">
         <div>
             <p><font face="Courier New">
-                Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br><br>C:\Users\User> Я - начинающий программист и верстальщик.
-                <br>Изучаю: С++, HTML5, CSS3, JS </font></p>
+                Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br><br>C:\Users\User> Я - начинающий программист и верстальщик, мне 17 лет.<br>
+                Обучаюсь в Колледже Экономики и Информатики им. Афанасьева.
+                <br>Изучаю: С++, HTML5, CSS3, JavaScript. </font></p>
         </div>
                 <div class="Lang-imgs">
                     <div class="Language"><img src="Images/сplus.png" alt=""></div>
@@ -46,8 +47,23 @@
                 <div class="Language"><img src="Images/js.png" alt=""></div>
             </div>
             </div>
+    </div>
 
+    <div class="MyProjects">
+     <div>
+         <p id="Project-button"><font face="IMPACT">Мои_Проекты.cmd</font></p>
+     </div>
+     <div><img src="Images/cmd-butts.png" alt=""></div>
+    </div>
+    <div class="bg-clr">
+    <div class="MyProjects-Info">
+        <div>
+            <p><font face="Courier New">
+                Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br>Примеры моих работ: </font></p>
+                <div><a href="https://github.com/MHEKALS/WikiTest/tree/main/test">WikiPedia</a></div>
+             </div>
 
+            </div>
     </div>
 
 </body>
