--- a/index.html
+++ b/index.html
@@ -60,10 +60,19 @@
         <div>
             <p><font face="Courier New">
                 Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br>Примеры моих работ: </font></p>
-                <div><a href="https://github.com/MHEKALS/WikiTest/tree/main/test">WikiPedia</a></div>
-             </div>
+                <div>
+                    <div><a href="https://github.com/MHEKALS/WikiTest/tree/main/test">WikiPedia</a></div>
+                    <div><a href="https://github.com/MHEKALS/RbxLine-Practic/tree/main/Project2">RbxLine</a></div>
+                    <div><a href="https://github.com/MHEKALS/SuperBloom/tree/main/%D0%92%D1%91%D1%80%D1%81%D1%82%D0%BA%D0%B0">SuperBloom</a></div>
+                </div>
+            </div>
 
             </div>
+    </div>
+
+    <div class="Footer"> 
+        <div><p>Contact Info</p></div>
+            <div><a href="https://t.me/MHEKALS"><img src="Images/telegram.png" alt="telegramlogo"></a></div>
     </div>
 
 </body>
