Added Footer, fixed profile image, added links to telegram and discord

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="About">
         <a href="#About-button"><font face="Courier New">Обо мне</font></a>
         <a href="#Project-button"><font face="Courier New">Проекты</font></a>
-        <a href="#"><font face="Courier New">Контакты</font></a>
+        <a href="#contact-button"><font face="Courier New">Контакты</font></a>
     </div>
     </header>
 
@@ -23,7 +23,7 @@
                 <h1><font face="Courier New">Денис Панюхин Алексеевич</font></h1>
                 <p><font face="Courier New">Новичок в языках: HTML, CSS, JS, C++</font></p>
             </div>
-             <div><img src="Images/top.png"></div>
+             <div class="prof-photo"><img src="Images/top.png"></div>
     </div>
 
     <div class="AboutMe">
@@ -37,7 +37,8 @@
         <div>
             <p><font face="Courier New">
                 Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br><br>C:\Users\User> Я - начинающий программист и верстальщик, мне 17 лет.<br>
-                Обучаюсь в Колледже Экономики и Информатики им. Афанасьева.
+                Обучаюсь в Колледже Экономики и Информатики им. Афанасьева.<br>
+                Могу делать простые сайты на HTML+CSS и несложные вычислительные алгоритмы на C++.
                 <br>Изучаю: С++, HTML5, CSS3, JavaScript. </font></p>
         </div>
                 <div class="Lang-imgs">
@@ -71,9 +72,10 @@
     </div>
 
     <div class="Footer"> 
-        <div><p>Contact Info</p></div>
+        <div><p id="contact-button"><font face="Courier new">Contact Info:</font></p></div>
             <div><a href="https://t.me/MHEKALS"><img src="Images/telegram.png" alt="telegramlogo"></a></div>
-    </div>
+            <div><a href="https://discordapp.com/users/1nonsense1/"><img class="ds" src="Images/discord.png" alt="discordlogo"></a></div>
+        </div>
 
 </body>
 
