--- a/index.html
+++ b/index.html
@@ -72,9 +72,12 @@
     </div>
 
     <div class="Footer"> 
-        <div><p id="contact-button"><font face="Courier new">Contact Info:</font></p></div>
-            <div><a href="https://t.me/MHEKALS"><img src="Images/telegram.png" alt="telegramlogo"></a></div>
-            <div><a href="https://discordapp.com/users/1nonsense1/"><img class="ds" src="Images/discord.png" alt="discordlogo"></a></div>
+        <div><p><font face="Courier new">gafikov16@mail.ru</font></p></div>
+        <div>
+            <div><p id="contact-button"><font face="Courier new">Contact Info:</font></p></div>
+                <div><a href="https://t.me/MHEKALS"><img src="Images/telegram.png" alt="telegramlogo"></a></div>
+                <div><a href="https://discordapp.com/users/1nonsense1/"><img class="ds" src="Images/discord.png" alt="discordlogo"></a></div>
+            </div>
         </div>
 
 </body>
