added hover to buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <div><a class="git" href="https://github.com/MHEKALS"><img class="profile" src="Images/github_logo.jpg" alt="gitlogo"></a></div>
     <div class="About">
-        <a href="#About-button"><font face="Courier New">Обо мне</font></a>
-        <a href="#Project-button"><font face="Courier New">Проекты</font></a>
-        <a href="#contact-button"><font face="Courier New">Контакты</font></a>
+        <a class="butt" href="#About-button"><font face="Courier New">Обо мне</font></a>
+        <a class="butt" href="#Project-button"><font face="Courier New">Проекты</font></a>
+        <a class="butt" href="#contact-button"><font face="Courier New">Контакты</font></a>
     </div>
     </header>
 
@@ -49,7 +49,7 @@
             </div>
             </div>
     </div>
-
+    
     <div class="MyProjects">
      <div>
          <p id="Project-button"><font face="IMPACT">Мои_Проекты.cmd</font></p>
@@ -62,9 +62,9 @@
             <p><font face="Courier New">
                 Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br>Примеры моих работ: </font></p>
                 <div>
-                    <div><a href="https://github.com/MHEKALS/WikiTest/tree/main/test">WikiPedia</a></div>
-                    <div><a href="https://github.com/MHEKALS/RbxLine-Practic/tree/main/Project2">RbxLine</a></div>
-                    <div><a href="https://github.com/MHEKALS/SuperBloom/tree/main/%D0%92%D1%91%D1%80%D1%81%D1%82%D0%BA%D0%B0">SuperBloom</a></div>
+                    <div><a class="butt1" href="https://github.com/MHEKALS/WikiTest/tree/main/test">WikiPedia</a></div>
+                    <div><a class="butt1" href="https://github.com/MHEKALS/RbxLine-Practic/tree/main/Project2">RbxLine</a></div>
+                    <div><a class="butt1" href="https://github.com/MHEKALS/SuperBloom/tree/main/%D0%92%D1%91%D1%80%D1%81%D1%82%D0%BA%D0%B0">SuperBloom</a></div>
                 </div>
             </div>
 
