Changed profile picture

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                 <h1><font face="Courier New">Денис Панюхин Алексеевич</font></h1>
                 <p><font face="Courier New">Новичок в языках: HTML, CSS, JS, C++</font></p>
             </div>
-             <div class="prof-photo"><img src="Images/top.png"></div>
+             <div class="prof-photo"><img src="Images/photo.gif"></div>
     </div>
 
     <div class="AboutMe">
      <div>
          <p id="About-button"><font face="IMPACT">Обо_мне.cmd</font></p>
      </div>
-     <div><img src="Images/cmd-butts.png" alt=""></div>
+     <div class="butts"><img src="Images/cmd-butts.png" alt=""></div>
     </div>
     <div class="bg-clr">
     <div class="AboutMe-Info">
@@ -54,7 +54,7 @@
      <div>
          <p id="Project-button"><font face="IMPACT">Мои_Проекты.cmd</font></p>
      </div>
-     <div><img src="Images/cmd-butts.png" alt=""></div>
+     <div class="butts"><img src="Images/cmd-butts.png" alt=""></div>
     </div>
     <div class="bg-clr">
     <div class="MyProjects-Info">
