Small fixes in size of MyProject

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
      </div>
      <div class="butts"><img src="Images/cmd-butts.png" alt=""></div>
     </div>
-    <div class="bg-clr">
+    <div class="bg-clr2">
     <div class="MyProjects-Info">
         <div>
             <p><font face="Courier New">
