--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <p><font face="Courier New">
                 Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br>Примеры моих работ: </font></p>
                 <div>
-                    <div><a class="butt1" href="https://github.com/MHEKALS/WikiTest/tree/main/test">WikiPedia</a></div>
-                    <div><a class="butt1" href="https://github.com/MHEKALS/RbxLine-Practic/tree/main/Project2">RbxLine</a></div>
-                    <div><a class="butt1" href="https://github.com/MHEKALS/SuperBloom/tree/main/%D0%92%D1%91%D1%80%D1%81%D1%82%D0%BA%D0%B0">SuperBloom</a></div>
+                    <div><a class="butt1" href="https://mhekals.github.io/WikiTest/">WikiPedia</a></div>
+                    <div><a class="butt1" href="https://mhekals.github.io/RbxLine-Practic/">RbxLine</a></div>
+                    <div><a class="butt1" href="https://mhekals.github.io/SuperBloom/">SuperBloom</a></div>
                 </div>
             </div>
 
