Fixed links in MyProjects

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 Microsoft Windows [Version 10.0.19045.5011]<br>(c) Корпорация Майкрософт (Microsoft Corporation). Все права защищены.<br>Примеры моих работ: </font></p>
                 <div>
                     <div><a class="butt1" href="https://mhekals.github.io/WikiTest/">WikiPedia</a></div>
-                    <div><a class="butt1" href="https://mhekals.github.io/RbxLine-Practic/">RbxLine</a></div>
-                    <div><a class="butt1" href="https://mhekals.github.io/SuperBloom/">SuperBloom</a></div>
+                    <div><a class="butt1" href="https://mhekals.github.io/rbxline_practic/">RbxLine</a></div>
+                    <div><a class="butt1" href="https://mhekals.github.io/superbloom2/">SuperBloom</a></div>
                 </div>
             </div>
 
