--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <title>About myself</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -20,7 +21,7 @@
 
         <div class="start">
             <div>
-                <h1><font face="Courier New">Денис Панюхин Алексеевич</font></h1>
+                <h1><font face="Courier New">Панюхин Денис Алексеевич</font></h1>
                 <p><font face="Courier New">Новичок в языках: HTML, CSS, JS, C++</font></p>
             </div>
              <div class="prof-photo"><img src="Images/photo.gif"></div>
